# sidebar-notebook

./: .gitignore  HANDOVER.md  README.md  index.html  package-lock.json  package.json
scripts/: fix-note-panel.py  gen-icons.mjs  gen-source-icon.mjs  mk-shortcut.ps1
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: NotePanel.tsx  SidebarTrigger.tsx
src/styles/: global.css
开发日志/: Phase1-初始化与核心交互.md  Phase2-双窗口改造.md  Phase2-简化设计-修复三个问题.md  Phase2-路径改名-完整编译.md
