[package]
name = "sidebar-notes"
version = "0.1.0"
edition = "2021"

[lib]
name = "sidebar_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
debug = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
 tauri = { version = "2", features = ["tray-icon"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
